--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap');
+* {
+    font-family: 'Balsamiq Sans', cursive;
+}
 h1 {
     color: white;
     background-color: black;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    /* font-family:Verdana, Geneva, Tahoma, sans-serif; */
 }
 h1 span {
     color:aqua
@@ -12,9 +16,10 @@ h2 {
     text-align: center;
     font-style: italic;
     font-family: sans-serif;
-    font-weight: lighter;
+    font-weight:lighter;
 }
 h3 {
     background-color:lightskyblue;
     text-align: right;
+    text-decoration: underline;
 }
